k8s/spark-java-helm/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparkjava-deployment
  labels:
    app: sparkjava
  namespace: sparkjava
spec:
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: sparkjava-deployment
  template:
    metadata:
      labels:
        app: sparkjava-deployment
    spec:
      containers:
      - name: sparkjava
        image: 887870046594.dkr.ecr.eu-west-2.amazonaws.com/ekandha:number
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 300m
            memory: 500Mi
        ports:
        - containerPort: 8080
