k8s/spark-java-helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sparkjava-ingress
  namespace: sparkjava
spec:
  rules:
  - host: clr-sparck.ajendra.xyz
    http:
      paths:
      - path: /sparkjava-hello-world-1.0
        pathType: Prefix
        backend:
          service:
            name: sparkjava-svc    #service name should be matched to the svc.yml file inside the metadata block name
            port:
              number: 80
